feat(core) add FFM bindings generator